--- a/package.json
+++ b/package.json
@@ -23,8 +23,20 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.0",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "express-session": "^1.18.0",
+    "moment-timezone": "^0.5.45",
+    "mongoose": "^8.5.2",
+    "multer": "^1.4.5-lts.1",
+    "nest-winston": "^1.9.7",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "winston": "^3.13.1",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
