--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.9.7",
+    "node-cron": "^3.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "winston": "^3.13.1",
